--- a/app/src/main/res/values/Styles.xml
+++ b/app/src/main/res/values/Styles.xml
@@ -9,6 +9,8 @@
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_margin">0.5dp</item>
+        <item name="backgroundTint">@color/orange</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     
     
